# news_llm_leter

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/: rss_digest_detailed_design.md
src/rss_digest/: __init__.py  dedup.py  models.py
src/rss_digest/api/: __init__.py  dependencies.py  main.py  schemas.py
src/rss_digest/api/routers/: admin.py  auth.py  destinations.py  digests.py  feeds.py  groups.py  helpers.py  items.py  schedules.py
src/rss_digest/db/: __init__.py  base.py  models.py  session.py
src/rss_digest/repository/: __init__.py  base.py  destinations.py  digests.py  feeds.py  groups.py  items.py  job_runs.py  schedules.py  sqlite.py  users.py
src/rss_digest/services/: __init__.py
src/rss_digest/services/digest/: __init__.py  builder.py  delivery.py  storage.py
src/rss_digest/services/evaluation/: __init__.py  relevance.py  service.py  summarizer.py
src/rss_digest/services/materialize/: __init__.py  service.py
src/rss_digest/services/pipeline/: service.py
src/rss_digest/services/rss/: __init__.py  discovery.py  fetcher.py  http.py  http_client.py
src/rss_digest/services/scheduler/: __init__.py  celery_app.py  service.py  tasks.py
src/rss_digest/tasks/: __init__.py  app.py  factory.py  tasks.py
tests/: conftest.py  test_admin_api.py  test_admin_metrics.py  test_api.py  test_auth_logout.py  test_dedup.py  test_delivery_service.py  test_items_filters.py  test_pipeline.py  test_rss_discovery.py  test_rss_http_fetcher.py  test_scheduler.py  test_sqlite_persistence.py
