[project]
name = "rss-digest"
version = "0.1.0"
description = "RSS digest utilities"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "uvicorn>=0.30.0",
    "email-validator>=2.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
