[project]
name = "rss-digest"
version = "0.1.0"
description = "RSS digest utilities"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "uvicorn>=0.30.0",
    "email-validator>=2.1.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
    "celery>=5.3.6",
    "feedparser>=6.0.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
